--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <!-- Arxiv Link. -->
             <span class="link-block">
-              <a target="_blank" href="https://example.com"
+              <a target="_blank" href="https://arxiv.org/abs/2403.08248"
                  class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                     <i class="fas fa-file"></i>
