--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
 
             <!-- Code Link. -->
             <span class="link-block">
-              <a target="_blank" href="https://example.com"
+              <a target="_blank" href="https://github.com/HaoxuHuang/copa"
                  class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                     <i class="fab fa-github"></i>
                 </span>
-                <span>Code (Coming Soon)</span>
+                <span>Code</span>
                 </a>
             </span>
             </div>
